templates/ibm-kerify-dev_template.yaml
---
# Source: ibm-kerify-dev/templates/service.yaml
# Licensed Materials - Property of IBM
# 5737-E67
# @ Copyright IBM Corporation 2016, 2018 All Rights Reserved
# US Government Users Restricted Rights - Use, duplication or disclosure restricted by GSA ADP Schedule Contract with IBM Corp.

apiVersion: v1
kind: Service
metadata:
  name: release-name-ibm-kerify-svc
  labels:
    app: release-name-ibm-kerify
    chart: ibm-kerify-dev-1.0.0
    heritage: Helm
    release: release-name
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8090
  selector:
    app: release-name-ibm-kerify
---
# Source: ibm-kerify-dev/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-ibm-kerify
  labels:
    app: release-name-ibm-kerify
    chart: ibm-kerify-dev-1.0.0
    heritage: Helm
    release: release-name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-ibm-kerify
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: release-name-ibm-kerify
        chart: ibm-kerify-dev-1.0.0
        heritage: Helm
        release: release-name
      annotations:
        productName: ibm-kerify
        productID: ibm-kerify_1.0.0_apachev2_00000
        productVersion: 1.0.0
    spec:
      serviceAccountName: release-name-service-account
      hostNetwork: false
      hostPID: false
      hostIPC: false
      securityContext:
        runAsNonRoot: false
        runAsUser: 0
      containers:
        - name: ibm-kerify
          image: "ibmcom/icp-sert-bats:3.2.0"
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
            runAsUser: 0
            capabilities:
              drop:
              - ALL
              add:
              - SETPCAP
              - AUDIT_WRITE
              - CHOWN
              - NET_RAW
              - DAC_OVERRIDE
              - FOWNER
              - FSETID
              - KILL
              - SETUID
              - SETGID
              - NET_BIND_SERVICE
              - SYS_CHROOT
              - SETFCAP
          livenessProbe:
            exec:
              command:
                - ls
                - /run.sh
            initialDelaySeconds: 40
            periodSeconds: 30
          readinessProbe:
            exec:
              command:
                - ls
                - /run.sh
            initialDelaySeconds: 30
            periodSeconds: 30
          volumeMounts:
            - mountPath: /var/run
              name: docker-sock
          resources:
              limits:
                cpu: 512m
                memory: 1024Mi
              requests:
                cpu: 100m
                memory: 100Mi
      nodeSelector:
        {}
      volumes:
      - name: docker-sock
        #hostPath:
        #    path: /var/run
      affinity:        
        #https://kubernetes.io/docs/concepts/configuration/assign-pod-node/
          nodeAffinity:
            requiredDuringSchedulingIgnoredDuringExecution:
            #If you specify multiple nodeSelectorTerms associated with nodeAffinity types,
            #then the pod can be scheduled onto a node if one of the nodeSelectorTerms is satisfied.
            #
            #If you specify multiple matchExpressions associated with nodeSelectorTerms,
            #then the pod can be scheduled onto a node only if all matchExpressions can be satisfied.
            #
            #valid operators: In, NotIn, Exists, DoesNotExist, Gt, Lt
              nodeSelectorTerms:
              - matchExpressions:
                - key: beta.kubernetes.io/arch
                  operator: In
                  values:
                  - amd64
                  - ppc64le
                  - s390x
            preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 2
              preference:
                matchExpressions:
                - key: beta.kubernetes.io/arch
                  operator: In
                  values:
                  - amd64
            - weight: 2
              preference:
                matchExpressions:
                - key: beta.kubernetes.io/arch
                  operator: In
                  values:
                  - ppc64le
            - weight: 2
              preference:
                matchExpressions:
                - key: beta.kubernetes.io/arch
                  operator: In
                  values:
                  - s390x
      dnsPolicy: ClusterFirst
      restartPolicy: Always
---
# Source: ibm-kerify-dev/templates/ingress.yaml
# Licensed Materials - Property of IBM
# 5737-E67
# @ Copyright IBM Corporation 2016, 2018 All Rights Reserved
# US Government Users Restricted Rights - Use, duplication or disclosure restricted by GSA ADP Schedule Contract with IBM Corp.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: release-name-ibm-kerify-ingress
  labels:
    app: release-name-ibm-kerify
    chart: ibm-kerify-dev-1.0.0
    heritage: Helm
    release: release-name
  annotations:
     ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - hosts:
        http:
          paths:
          - path: /
            backend:
              serviceName: "release-name-ibm-kerify-svc"
              servicePort: 80
---
# Source: ibm-kerify-dev/templates/tests/test-sert-bats.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "ibm-kerify-dev-release-name-test"
  labels:
    app: ibm-kerify-dev-test
    chart: ibm-kerify-dev-1.0.0
    heritage: Helm
    release: release-name
  annotations:
    helm.sh/hook: test-success
    helm.sh/hook-delete-policy: "hook-succeeded"
spec:
  serviceAccountName: release-name-service-account
  hostNetwork: false
  hostPID: false
  hostIPC: false
  securityContext:
    runAsNonRoot: false
    runAsUser: 0
  containers:
    - name: "ibm-kerify-dev-container"
      image: ibmcom/kubectl:v1.13.5
      imagePullPolicy: "IfNotPresent"
      command:
        - kubectl
        - get
        - pods
      securityContext:
        privileged: false
        readOnlyRootFilesystem: false
        allowPrivilegeEscalation: false
        runAsNonRoot: false
        runAsUser: 0
        capabilities:
          drop:
          - ALL
          add:
          - SETPCAP
          - AUDIT_WRITE
          - CHOWN
          - NET_RAW
          - DAC_OVERRIDE
          - FOWNER
          - FSETID
          - KILL
          - SETUID
          - SETGID
          - NET_BIND_SERVICE
          - SYS_CHROOT
          - SETFCAP
      resources:
        limits:
          cpu: 512m
          memory: 1024Mi
        requests:
          cpu: 100m
          memory: 100Mi
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
        - preference:
            matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                  - amd64
          weight: 2
        - preference:
            matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                  - ppc64le
          weight: 2
        - preference:
            matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                  - s390x
          weight: 2
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: beta.kubernetes.io/arch
                operator: In
                values:
                  - amd64
                  - ppc64le
                  - s390x
  restartPolicy: Never
